@startuml
!include style.puml

skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

Class HiddenOutside #FFFFFF

Package Model <<Rectangle>>{

Interface Model <<Interface>>
Class Model
Class ModelManager
class PlannedBook

Package Plan {
    class UniquePlannedList
    class Plan
    class PlannedRecipeMap
}
class Date

Package Recipe {

    class Recipe
    class Hidden #FFFFFF
}
HiddenOutside ...> Model
ModelManager o-- "1" PlannedBook
ModelManager .up.|> Model
ModelManager --> "1" Plan : filtered list

Recipe -up[hidden]- Hidden
PlannedBook *-down-"         1" UniquePlannedList
PlannedBook *-down-"1" PlannedRecipeMap
UniquePlannedList o-- "*" Plan
PlannedRecipeMap o-- "*" Plan
PlannedRecipeMap o-- "*" Recipe
Plan o-- "1" Recipe
Plan *-- "1" Date

@enduml
